Fix: Layout issues

--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -23,6 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   gap: 0 2rem;
   position: relative;
 }
