--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   --game-spacing: 32px;
 
